@@ -78,4 +78,7 @@
 #define _GLIBCXX_LLP64 1
 #endif
 
+// See libstdc++/59807
+#define _GTHREAD_USE_MUTEX_INIT_FUNC 1
+
 #endif
