@@ -1,3 +1,10 @@
+2014-10-14  Kai Tietz  <ktietz@redhat.com>
+
+	PR libstdc++/57440
+	* config/os/mingw32/os_defines.h (_GTHREAD_USE_MUTEX_INIT_FUNC):
+	Define to avoid leak.
+	* config/os/mingw32-w64/os_defines.h: Likewise.
+
 2014-10-03  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/63449
